# py-funny-endpoints

./: Dockerfile  LICENSE  README.md  docker-compose.yml  swagger.yml
.github/workflows/: ci.yml
funny-endpoints/: pyproject.toml
funny-endpoints/funny_endpoints/: __init__.py  funny.py  main.py  requester.py  router.py
funny-endpoints/tests/: requester_mock.py  test_funny_endpoints.py  test_router.py
