[tool.poetry]
name = "funny-endpoints"
version = "0.1.0"
description = ""
authors = ["Daniel Lundborg <daniel.lundborg@sandvik.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
requests = "^2.25.1"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
funny = 'funny_endpoints.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
